--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/_EmployeeServiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/_EmployeeServiceList.cshtml
@@ -30,7 +30,7 @@
                     @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.DefaultFlag)
                     </td> *@
                             <td class="text-center">
-                                <a href="../@controllerName/UpdateEmployeePersonalDetails?employeeId=@item.EmployeeId&personId=@item.EmployeeServiceId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/GetEmployeeService?employeeId=@item.EmployeeId&personId=@Model.PersonId&employeeServiceId=@item.EmployeeServiceId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <a href="../@controllerName/Delete?employeeIds=@item.EmployeeId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                        </tr>
