--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorLeaveSchedule/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorLeaveSchedule/CreateEdit.cshtml
@@ -29,7 +29,7 @@
                         </div>  <!--end row-->
                     </div>
                     <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
+                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = "frmHospitalDoctorLeaveScheduleTime" }))
                         {
                             @Html.HiddenFor(m => m.HospitalDoctorLeaveScheduleId)
                             <div class="row">
@@ -68,7 +68,6 @@
                                             @Html.ValidationMessageFor(x => x.HospitalDoctorId)
                                         </div>
                                     </div>
-
                                 }
                                 <div class="col-lg-6">
                                     <div class="mb-3">
@@ -87,16 +86,18 @@
                                 </div>
                                 <div class="col-lg-2 FromUptoTimeDivId" style="@displayFromTimeDiv">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.FromTime, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.FromTime, new { @class = "form-control form-time", type = "time" })
+                                        @Html.LabelFor(x => x.FromTime, "From Time:", new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.FromTime, new { type = "time", @class = "form-control form-time", onchange = "ValidateLeaveScheduleTime()" })
                                         @Html.ValidationMessageFor(x => x.FromTime)
+                                        <span id="errorFromTime" class="error"></span>
                                     </div>
                                 </div>
                                 <div class="col-lg-2 FromUptoTimeDivId" style="@displayFromTimeDiv">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.UptoTime, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.UptoTime, new { @class = "form-control form-time", type = "time" })
+                                        @Html.LabelFor(x => x.UptoTime, "Upto Time:", new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.UptoTime, new { type = "time", @class = "form-control form-time", onchange = "ValidateLeaveScheduleTime()" })
                                         @Html.ValidationMessageFor(x => x.UptoTime)
+                                        <span id="errorUptoTime" class="error"></span>
                                     </div>
                                 </div>
                                 <div class="row">
@@ -108,7 +109,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            <button type="submit" class="btn btn-success" data-test-selector="linkSave" onclick="HospitalDoctorLeaveSchedule.ValidateLeaveScheduleTime()">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
@@ -165,11 +166,11 @@
                 "December"
             ],
                 "firstDay": 1
-                                                            },
+                                                                                                                                            },
             minYear: new Date().getFullYear(),
             maxYear: new Date().getFullYear() + 1
-                                                        },
+                                                                                                                                        },
             function (start, end, label) { });
-                                                    });
+                                                                                                                                    });
     </script>
 }
