--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorLeaveSchedule/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorLeaveSchedule/CreateEdit.cshtml
@@ -4,7 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetDepartmentByCentreCode()", IsDisabled = Model.HospitalDoctorId > 0 };
-    DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetHospitalDoctorsListByCentreCodeAndDepartmentId()" };
+    DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetHospitalDoctorsListByCentreCodeAndDepartmentId()", IsDisabled = Model.HospitalDoctorId > 0 };
 
     string displayFromTimeDiv = Model.IsFullDay ? "display:none" : "display:block";
 }
@@ -50,6 +50,8 @@
                                 @if (Model.HospitalDoctorLeaveScheduleId > 0)
                                 {
                                     @Html.HiddenFor(x => x.HospitalDoctorId)
+                                    @Html.HiddenFor(x => x.SelectedCentreCode)
+                                    @Html.HiddenFor(x => x.SelectedDepartmentId)
                                 }
                                 else
                                 {
@@ -109,8 +111,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success" data-test-selector="linkSave" onclick="HospitalDoctorLeaveSchedule.ValidateLeaveScheduleTime()">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            <button type="submit" class="btn btn-success" data-test-selector="linkSave" onclick="HospitalDoctorLeaveSchedule.ValidateLeaveScheduleTime(); return false;">@AdminResources.LabelSave</button>
+                            <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.SelectedCentreCode&SelectedDepartmentId=@Model.SelectedDepartmentId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
@@ -166,11 +168,11 @@
                 "December"
             ],
                 "firstDay": 1
-                                                                                                                                            },
+                                                                                                                                                    },
             minYear: new Date().getFullYear(),
             maxYear: new Date().getFullYear() + 1
-                                                                                                                                        },
+                                                                                                                                                },
             function (start, end, label) { });
-                                                                                                                                    });
+                                                                                                                                            });
     </script>
 }
