--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
@@ -60,6 +60,13 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.Charges, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.Charges, new { @class = "form-control", type = "number" })
+                                        @Html.ValidationMessageFor(x => x.Charges)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.Remark, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.Remark, new { @class = "form-control", type = "number" })
                                         @Html.ValidationMessageFor(x => x.Remark)
