--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/List.cshtml
@@ -13,7 +13,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">Hospital Doctor Allocated OPD Room List</span>
+                        <span class="card-title">Hospital Doctor List</span>
                     </div>
                     <div class="card-header">
                        @*  <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/CreateHospital" role="button"><i class="fas fa-plus me-2"></i>Add Hospital</a> *@
