--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/_List.cshtml
@@ -13,20 +13,19 @@
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
-                @if (Model?.HospitalDoctorOPDScheduleList?.Count > 0)
+                @if (Model?.HospitalDoctorList?.Count > 0)
                 {
-                    foreach (var item in Model?.HospitalDoctorOPDScheduleList)
+                    foreach (var item in Model?.HospitalDoctorList)
                     {
-                        <tr>         
-                            <td>@item.HospitalDoctorId</td>
-                            <td>@item.WeekDayEnumId</td>
-                            <td>@item.OPDTimesOfDay</td>
-                            <td>@item.FromTime</td>
-                            <td>@item.UptoTime</td>
-                            <td>@item.TimesSlothInMinute</td>
-                            <td>@item.TimeZone</td>
+                        <tr>
+                            <td style="text-align: center; width: 0px"><img src="@item.ImagePath" class="rounded-circle thumb-xs me-1" /></td>
+                            <td>@item.FirstName</td>
+                            <td>@item.LastName</td>
+                            <td>@item.MobileNumber</td>
+                            <td>@item.EmailId</td>
+                            <td>@item.MedicalSpecilization</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?hospitalDoctorId=@item.HospitalDoctorId&hospitalDoctorOPDScheduleId=@item.HospitalDoctorOPDScheduleId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
+                                <a href="../@controllerName/Edit?hospitalDoctorId=@item.HospitalDoctorId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
                             </td>
                         </tr>
                     }
