--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/HospitalDoctorVisitingChargesByDoctorIdList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/HospitalDoctorVisitingChargesByDoctorIdList.cshtml
@@ -13,8 +13,8 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">Hospital Doctor Visiting Charges by DoctorId List</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Visiting Charges</a>
+                        <span class="card-title">Hospital Doctor Visiting Charges List: </span>
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create?hospitalDoctorId=@Model.HospitalDoctorId" role="button"><i class="fas fa-plus me-2"></i>Add Visiting Charges</a>
                     </div>
                         <div class="row">
                             <div class="col-sm-12 table-responsive">
