--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/CreateEdit.cshtml
@@ -39,7 +39,8 @@
         </div>
     </div>
 </div>
-
+@Html.Partial("_ValidationScriptsPartial")
+<script src="~/js/coditech/hms/HospitalDoctorOPDSchedule.js"></script>
 
 
 
