--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/_CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/_CreateEdit.cshtml
@@ -4,7 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
-@using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
+@using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = "frmHospitalDoctorOPDSchedule" }))
 {
     <div class="row">
         @Html.HiddenFor(m => m.HospitalDoctorId)
@@ -22,14 +22,14 @@
                             <div class="mb-3">
                                 @Html.LabelFor(x => x.FromTimeMorning, new { @class = "form-label required" })
                                 @Html.TextBoxFor(x => x.FromTimeMorning, new { @class = "form-control", type = "time" })
-                                @Html.ValidationMessageFor(x => x.FromTimeMorning)
+                                @Html.ValidationMessageFor(x => x.FromTimeMorning, null, new { id = "errorFromTimeMorning" })
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="mb-3">
                                 @Html.LabelFor(x => x.UptoTimeMorning, new { @class = "form-label required" })
                                 @Html.TextBoxFor(x => x.UptoTimeMorning, new { @class = "form-control", type = "time" })
-                                @Html.ValidationMessageFor(x => x.UptoTimeMorning)
+                                @Html.ValidationMessageFor(x => x.UptoTimeMorning, null, new { id = "errorUptoTimeMorning" })
                             </div>
                         </div>
                         <div class="col-lg-4">
@@ -62,14 +62,14 @@
                             <div class="mb-3">
                                 @Html.LabelFor(x => x.FromTimeEvening, new { @class = "form-label required" })
                                 @Html.TextBoxFor(x => x.FromTimeEvening, new { @class = "form-control", type = "time" })
-                                @Html.ValidationMessageFor(x => x.FromTimeEvening)
+                                @Html.ValidationMessageFor(x => x.FromTimeEvening, null, new { id = "errorFromTimeEvening" })
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="mb-3">
                                 @Html.LabelFor(x => x.UptoTimeEvening, new { @class = "form-label required" })
                                 @Html.TextBoxFor(x => x.UptoTimeEvening, new { @class = "form-control", type = "time" })
-                                @Html.ValidationMessageFor(x => x.UptoTimeEvening)
+                                @Html.ValidationMessageFor(x => x.UptoTimeEvening, null, new { id = "errorUptoTimeEvening" })
                             </div>
                         </div>
                         <div class="col-lg-4">
@@ -91,7 +91,6 @@
             </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+    <button type="submit" class="btn btn-success" onclick="HospitalDoctorOPDSchedule.ValidateHospitalDoctorOPDScheduleTime(); return false;">@AdminResources.LabelSave</button>
     <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.SelectedCentreCode&SelectedDepartmentId=@Model.SelectedDepartmentId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
-
 }
