--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemModelGroup/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryItemModelGroup/CreateEdit.cshtml
@@ -39,7 +39,16 @@
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.ItemModelGroupCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.ItemModelGroupCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @{
+                                            if (!string.IsNullOrEmpty(Model.ItemModelGroupCode))
+                                            {
+                                                @Html.TextBoxFor(x => x.ItemModelGroupCode, new { @class = "form-control", @readonly = "readonly" })
+                                            }
+                                            else
+                                            {
+                                                @Html.TextBoxFor(x => x.ItemModelGroupCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                            }
+                                        }
                                         @Html.ValidationMessageFor(x => x.ItemModelGroupCode)
                                     </div>
                                 </div>
