--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryStorageDimensionGroup/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryStorageDimensionGroup/CreateEdit.cshtml
@@ -40,7 +40,16 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.StorageDimensionGroupCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.StorageDimensionGroupCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                        @{
+                                            if (!string.IsNullOrEmpty(Model.StorageDimensionGroupCode))
+                                            {
+                                                @Html.TextBoxFor(x => x.StorageDimensionGroupCode, new { @class = "form-control", @readonly = "readonly" })
+                                            }
+                                            else
+                                            {
+                                                @Html.TextBoxFor(x => x.StorageDimensionGroupCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                            }
+                                        }
                                         @Html.ValidationMessageFor(x => x.StorageDimensionGroupCode)
                                     </div>
                                 </div>
