--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/EmployeeServiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/EmployeeServiceList.cshtml
@@ -1,4 +1,5 @@
-﻿@model EmployeeServiceListViewModel
+﻿@using Coditech.Admin.Utilities;
+@model EmployeeServiceListViewModel
 @{
     ViewBag.Title = "Employee Service List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
@@ -17,7 +18,7 @@
             <div class="col-10">
                 <div class="card">
                     <div class="card-header">
-                        <span class="card-title">Employee Service List</span>
+                        <span class="card-title">Employee Service List : @Model.FirstName @Model.LastName</span>
                         <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/GetEmployeeService?employeeId=@Model.EmployeeId&personId=@Model.PersonId" role="button"><i class="fas fa-plus me-2"></i>Add Employee Service</a>
                     </div>
                     <div class="card-body">
