--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/UpdateEmployeeServiceDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/EmployeeService/UpdateEmployeeServiceDetails.cshtml
@@ -1,4 +1,5 @@
-﻿@model EmployeeServiceViewModel
+﻿@using Coditech.Admin.Utilities;
+@model EmployeeServiceViewModel
 @{
     ViewBag.Title = Model.EmployeeServiceId > 0 ? "Update Employee Service" : "Add Employee Service";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
@@ -21,7 +22,7 @@
                             <div class="col">
                                 @if (Model.EmployeeServiceId > 0)
                                 {
-                                    <h4 class="card-title"><span>Update Employee Service- @Model.FirstName @Model.LastName</span></h4>
+                                    <h4 class="card-title"><span>Update Employee Service : @Model.FirstName @Model.LastName</span></h4>
                                 }
                                 else
                                 {
@@ -35,57 +36,60 @@
                         {
                             @Html.HiddenFor(m => m.EmployeeId)
                             @Html.HiddenFor(m => m.EmployeeServiceId)
+                            @Html.HiddenFor(m => m.PersonId)
                             <div class="row">
-                      
+
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.EmployeeCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.EmployeeCode, new { @class = "form-control" })
+                                        @Html.LabelFor(x => x.EmployeeCode, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.EmployeeCode, new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.EmployeeCode)
                                     </div>
-                                </div>                                
+                                </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EmployeeDesignationMasterId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                           {
-                                               DropdownType = DropdownTypeEnum.Designation.ToString(),
-                                               DropdownName = "EmployeeDesignationMasterId",
-                                               DropdownSelectedValue = Model.EmployeeDesignationMasterId.ToString()
-                                           })
+                               {
+                                   DropdownType = DropdownTypeEnum.Designation.ToString(),
+                                   DropdownName = "EmployeeDesignationMasterId",
+                                   DropdownSelectedValue = Model.EmployeeDesignationMasterId.ToString()
+                               })
                                         @Html.ValidationMessageFor(x => x.EmployeeDesignationMasterId)
+                                    </div>
+                                </div> <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.EmployeeStageEnumId, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownSelectedValue = Model.EmployeeStageEnumId.ToString(),
+                                   DropdownName = "EmployeeStageEnumId",
+                                   GroupCode = DropdownTypeEnum.EmployeeStage.ToString()
+                               })   @Html.ValidationMessageFor(x => x.EmployeeStageEnumId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.JoiningDate, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.JoiningDate, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.JoiningDate, new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.JoiningDate)
                                     </div>
                                 </div>
 
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PromotionDemotionDate, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.PromotionDemotionDate, new { @class = "form-control" })
+                                        @Html.LabelFor(x => x.PromotionDemotionDate, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.PromotionDemotionDate, new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.PromotionDemotionDate)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DateOfLeaving, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.DateOfLeaving, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.DateOfLeaving, new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.DateOfLeaving)
                                     </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsCurrentPosition, new { @class = "form-label" })
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsCurrentPosition, new { @class = "form-check-input" })
-                                        </div>
-                                    </div>
-                                </div>
+                                </div>                          
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.SalaryGradeCode, new { @class = "form-label" })
@@ -96,15 +100,8 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PayScale, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.PayScale, new { @class = "form-control", type = "number" })
+                                        @Html.TextBoxFor(x => x.PayScale, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PayScale)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.OrderDate, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.OrderDate, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.OrderDate)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
@@ -116,15 +113,30 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.OrderDate, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.OrderDate, new { @class = "form-control", @readonly = "true" })
+                                        @Html.ValidationMessageFor(x => x.OrderDate)
+                                    </div>
+                                </div>                           
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.Remark, new { @class = "form-label" })
                                         @Html.TextAreaFor(x => x.Remark, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Remark)
                                     </div>
                                 </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsCurrentPosition, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsCurrentPosition, new { @class = "form-check-input" })
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
 
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/EmployeeServiceList" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            <a href="../EmployeeMaster/EmployeeServiceList?employeeId=@Model.EmployeeId&personId=@Model.PersonId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
@@ -132,3 +144,205 @@
         </div>
     </div>
 </div>
+
+@section scripts {
+    <script>
+        $(function () {
+            $('#JoiningDate').daterangepicker({
+                singleDatePicker: true,
+                showDropdowns: true,
+                showWeekNumbers: false,
+                drops: "auto",
+                opens: "right",
+                autoApply: true,
+                "locale": {
+        @* "format": "DD-MM-YYYY", *@
+                "separator": " - ",
+                "applyLabel": "Apply",
+                "cancelLabel": "Cancel",
+                "fromLabel": "From",
+                "toLabel": "To",
+                "customRangeLabel": "Custom",
+                "weekLabel": "W",
+                "daysOfWeek": [
+                "Su",
+                "Mo",
+                "Tu",
+                "We",
+                "Th",
+                "Fr",
+                "Sa"
+            ],
+                "monthNames": [
+                "January",
+                "February",
+                "March",
+                "April",
+                "May",
+                "June",
+                "July",
+                "August",
+                "September",
+                "October",
+                "November",
+                "December"
+            ],
+                "firstDay": 1
+                                                                                                                                                            },
+            minYear: new Date().getFullYear(),
+            maxYear: new Date().getFullYear() + 1
+                                                                                                                                                        },
+            function (start, end, label) { });
+                                                                                                                                                    });
+    </script>
+
+    <script>
+        $(function () {
+            $('#PromotionDemotionDate').daterangepicker({
+                singleDatePicker: true,
+                showDropdowns: true,
+                showWeekNumbers: false,
+                drops: "auto",
+                opens: "right",
+                autoApply: true,
+                "locale": {
+        @* "format": "DD-MM-YYYY", *@
+                "separator": " - ",
+                "applyLabel": "Apply",
+                "cancelLabel": "Cancel",
+                "fromLabel": "From",
+                "toLabel": "To",
+                "customRangeLabel": "Custom",
+                "weekLabel": "W",
+                "daysOfWeek": [
+                "Su",
+                "Mo",
+                "Tu",
+                "We",
+                "Th",
+                "Fr",
+                "Sa"
+            ],
+                "monthNames": [
+                "January",
+                "February",
+                "March",
+                "April",
+                "May",
+                "June",
+                "July",
+                "August",
+                "September",
+                "October",
+                "November",
+                "December"
+            ],
+                "firstDay": 1
+                                                                                                                                                                    },
+            minYear: new Date().getFullYear(),
+            maxYear: new Date().getFullYear() + 1
+                                                                                                                                                                },
+            function (start, end, label) { });
+                                                                                                                                                            });
+    </script>
+
+    <script>
+        $(function () {
+            $('#DateOfLeaving').daterangepicker({
+                singleDatePicker: true,
+                showDropdowns: true,
+                showWeekNumbers: false,
+                drops: "auto",
+                opens: "right",
+                autoApply: true,
+                "locale": {
+        @* "format": "DD-MM-YYYY", *@
+                "separator": " - ",
+                "applyLabel": "Apply",
+                "cancelLabel": "Cancel",
+                "fromLabel": "From",
+                "toLabel": "To",
+                "customRangeLabel": "Custom",
+                "weekLabel": "W",
+                "daysOfWeek": [
+                "Su",
+                "Mo",
+                "Tu",
+                "We",
+                "Th",
+                "Fr",
+                "Sa"
+            ],
+                "monthNames": [
+                "January",
+                "February",
+                "March",
+                "April",
+                "May",
+                "June",
+                "July",
+                "August",
+                "September",
+                "October",
+                "November",
+                "December"
+            ],
+                "firstDay": 1
+                                                                                                                                                                    },
+            minYear: new Date().getFullYear(),
+            maxYear: new Date().getFullYear() + 1
+                                                                                                                                                                },
+            function (start, end, label) { });
+                                                                                                                                                            });
+    </script>
+
+    <script>
+        $(function () {
+            $('#OrderDate').daterangepicker({
+                singleDatePicker: true,
+                showDropdowns: true,
+                showWeekNumbers: false,
+                drops: "auto",
+                opens: "right",
+                autoApply: true,
+                "locale": {
+        @* "format": "DD-MM-YYYY", *@
+                "separator": " - ",
+                "applyLabel": "Apply",
+                "cancelLabel": "Cancel",
+                "fromLabel": "From",
+                "toLabel": "To",
+                "customRangeLabel": "Custom",
+                "weekLabel": "W",
+                "daysOfWeek": [
+                "Su",
+                "Mo",
+                "Tu",
+                "We",
+                "Th",
+                "Fr",
+                "Sa"
+            ],
+                "monthNames": [
+                "January",
+                "February",
+                "March",
+                "April",
+                "May",
+                "June",
+                "July",
+                "August",
+                "September",
+                "October",
+                "November",
+                "December"
+            ],
+                "firstDay": 1
+                                                                                                                                                                    },
+            minYear: new Date().getFullYear(),
+            maxYear: new Date().getFullYear() + 1
+                                                                                                                                                                },
+            function (start, end, label) { });
+                                                                                                                                                            });
+    </script>
+}
