Corrected the flow of HospitalDoctorVisitingCharges(Create,Edit,Delete).

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
     <link href="~/css/layout/icons.min.css" rel="stylesheet" type="text/css" />
     <link href="~/css/layout/metisMenu.min.css" rel="stylesheet" type="text/css" />
     <link href="~/css/layout/daterangepicker.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css" type="text/css"   />
     <link href="~/css/layout/app.min.css" rel="stylesheet" type="text/css">
     <link href="~/css/layout/datatables.bootstrap5.min.css" rel="stylesheet" type="text/css" />
     <link href="~/css/layout/buttons.bootstrap5.min.css" rel="stylesheet" />
@@ -129,6 +130,7 @@
     <script src="~/js/layout/simplebar.min.js"></script>
     <script src="~/js/layout/moment.js"></script>
     <script src="~/js/layout/daterangepicker.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.js" type="text/javascript"></script>
     <script src="~/js/layout/app.js"></script>
     <script src="~/js/layout/bootstrap-select.min.js"></script>
     <script src="https://cdn.tiny.cloud/1/o0x444idw8ayjhdnx713uvfpluef0dkh1n7geywd93dubpw1/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
