--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/HospitalDoctorVisitingChargesByDoctorIdList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/HospitalDoctorVisitingChargesByDoctorIdList.cshtml
@@ -1,54 +1,58 @@
 ﻿@model HospitalDoctorVisitingChargesListViewModel
 @{
-    ViewBag.Title = "Hospital Doctor Visiting Charges List";
-    string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-    string actionName = ViewContext.RouteData.Values["action"].ToString();
+	ViewBag.Title = "Hospital Doctor Visiting Charges List";
+	string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+	string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <div class="card">
-                    <div class="card-header">
-                        <span class="card-title">Hospital Doctor Visiting Charges List: </span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create?hospitalDoctorId=@Model.HospitalDoctorId" role="button"><i class="fas fa-plus me-2"></i>Add Visiting Charges</a>
-                    </div>
-                        <div class="row">
-                            <div class="col-sm-12 table-responsive">
-                                <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
-                                 <tbody>
-                                        @if (Model?.HospitalDoctorVisitingChargesList?.Count > 0)
-                                        {
-                                            foreach (var item in Model?.HospitalDoctorVisitingChargesList)
-                                            {
-                                                <tr>
-                                                    <td>@item.FromDate</td>
-                                                    <td>@item.UptoDate</td>
-                                                    <td>@item.AppointmentTypeEnumId</td>
-                                                    <td>@item.Charges</td>
-                                                    <td class="text-center">
-                                                        <a href="../@controllerName/Edit?hospitalDoctorId=@item.HospitalDoctorId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
-                                                        @*<a href="../@controllerName/Delete?hospitalDoctorIds=@item.HospitalDoctorId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
-                                                *@
-                                                    </td>
-                                                </tr>
-                                            }
-                                        }
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                     <div class="card-body">
-                        <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
-                            @Html.Partial("~/Views/HMS/HospitalDoctorVisitingCharges/_List.cshtml", Model)
-                        </div>
-                </div>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-12">
+				<div class="card">
+					<div class="card-header">
+						<span class="card-title">Hospital Doctor Visiting Charges List</span>
+						<a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create?hospitalDoctorId=@Model.HospitalDoctorId" role="button"><i class="fas fa-plus me-2"></i>Add Visiting Charges</a>
+					</div>
+					<div class="row">
+							@Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
+							@Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
+					</div>
+					<div class="row">
+						<div class="col-sm-12 table-responsive">
+							<table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
+						@Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
+						<tbody>
+									@if (Model?.HospitalDoctorVisitingChargesList?.Count > 0)
+									{
+										foreach (var item in Model?.HospitalDoctorVisitingChargesList)
+										{
+											<tr>
+												<td>@item.FromDate</td>
+												<td>@item.UptoDate</td>
+												<td>@item.AppointmentTypeEnumId</td>
+												<td>@item.Charges</td>
+												<td class="text-center">
+													<a href="../@controllerName/Edit?HospitalDoctorVisitingChargesId=@item.HospitalDoctorVisitingChargesId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
+													<a href="../@controllerName/Delete?HospitalDoctorVisitingChargesId=@item.HospitalDoctorVisitingChargesId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+												</td>
+											</tr>
+										}
+									}
+								</tbody>
+
+							</table>
+							@Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
+</div>
+
+
 <!-- end page content -->
