--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/AllocateAccessRights.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/AllocateAccessRights.cshtml
@@ -80,7 +80,9 @@
         </div>
     </div>
 </div>
+
 @section scripts {
+    <script src="~/js/coditech/admin/adminrolemaster.js"></script>
     <script src="~/js/layout/jstree.min.js"></script>
     <script>
         $(function () {
