--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/Edit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/Edit.cshtml
@@ -119,4 +119,5 @@
         </div>
     </div>
 </div>
-
+@Html.Partial("_ValidationScriptsPartial")
+<script src="~/js/coditech/admin/adminrolemaster.js"></script>
