--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryGeneralItemMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryGeneralItemMaster/_List.cshtml
@@ -23,7 +23,7 @@
                            
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?InventoryGeneralItemMasterId=@item.InventoryGeneralItemMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?countryIds=@item.InventoryGeneralItemMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Delete?InventoryGeneralItemMasterIds=@item.InventoryGeneralItemMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
